# zmq-play

./: .gitignore  DEVELOPER.md  LICENSE  README.md  build.gradle  commands.http  gradle.properties  lombok.config  lombok.settings  sb-upgrade.md  settings.gradle
.github/workflows/: ci.yml  release-main.yml  release-patch.yml
.junie/: config.json
gradle/: libs.versions.toml
zmq-pub-sub/: README.md  build.gradle  commands-curl.md  commands-lua.md  commands-powershell.md  commands.http  commands.md
zmq-pub-sub-python-client/: README.md  example.py  plan.md  pyproject.toml
zmq-pub-sub-python-client/src/zmq_pub_sub_client/: __init__.py  client.py  exceptions.py  logger.py  models.py  settings.py
zmq-pub-sub-python-client/tests/: test_client.py
zmq-pub-sub/examples/powershell/: example_01_basic_pub_sub.md
zmq-pub-sub/src/main/java/net/mmeany/play/app/: ZmqPubSubApplication.java  ZmqPublisherApplication.java
zmq-pub-sub/src/main/resources/: application.yml  log4j2-spring.xml  logback-spring.xml
zmq-pub-sub/src/test/java/net/mmeany/play/app/: ZmqPubSubApplicationTests.java  ZmqPublisherApplicationTests.java
zmq-pub-sub/src/test/resources/: integration_test.lua
zmq-publisher/: build.gradle
zmq-publisher/src/main/resources/: application.yml
zmq-publisher/src/test/java/net/mmeany/play/app/: ZmqPublisherApplicationTests.java
zmq-subscriber/: build.gradle
zmq-subscriber/src/main/java/net/mmeany/play/app/: ZmqSubscriberApplication.java
zmq-subscriber/src/main/resources/: application.yml
(+50 files in other folders)
